#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([todo], [0.1], [gombos@stud.ntnu.no])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([todo.c])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([regcomp strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
